kubernetes/apps/network/traefik/internal/dashboard/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-internal-http
  labels:
    route-type: internal
spec:
  parentRefs:
    - name: traefik-internal-gateway
      sectionName: web
      namespace: network
  hostnames:
    - traefik.mordex.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
# TODO: fix
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-internal-https
  labels:
    route-type: internal
spec:
  parentRefs:
    - name: traefik-internal-gateway
      sectionName: traefik
      namespace: network
  hostnames:
    - traefik.mordex.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard/
      backendRefs:
        - name: api@internal
          port: 9000
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: traefik.io
      #       kind: Middleware
      #       name: traefik-internal-dashboard-basicauth
